Bug 1995659 - Fix handling of duplicate transfer ArrayBuffers in ImageDecoder r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D269505